Bug 157939 - sort by upload/download speed not working
Summary: sort by upload/download speed not working
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-16 19:55 UTC by Mikko C.
Modified: 2008-04-05 17:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mikko C. 2008-02-16 19:55:52 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.2.2 
OS:                Linux

In KTorrent 3, sorting by upload or download speed doesn't work.
It does something, but it's not a sorting :)

Thanks!
Comment 1 Joris Guisson 2008-02-17 13:12:23 UTC
SVN commit 776094 by guisson:

Fix sorting of upload and download rate

BUG: 157939


 M  +4 -4      viewmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=776094
Comment 2 Uqbar 2008-04-05 17:05:54 UTC
It's still in KTorrent 2.2.5 (KDE 3.5.9)!
Or is this a distribution related problem?