Fix sorting of upload and download rate

BUG: 157939

svn path=/trunk/extragear/network/ktorrent/; revision=776094